--- a/empresa-home.html
+++ b/empresa-home.html
@@ -23,7 +23,7 @@
                         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i
                                 class="material-icons">menu</i></a>
                         <ul class="right hide-on-med-and-down">
-                            <li><a href="empresa-home.html" class="modal-trigger">HOME</a></li>
+                            <li><a href="cliente-home.html" class="modal-trigger">HOME</a></li>
                             <li><a href="empresa-sobre.html" class="modal-trigger">USUARIO</a></li>
                             <li><a href="empresa-sobre.html" class="modal-trigger">SOBRE</a></li>
                             <li><a href='index.html' class="waves-effect waves-light btn blue">SAIR</a></li>
