Alterar pessoa fisica e juridica, para radio button

--- a/cadastro.html
+++ b/cadastro.html
@@ -43,14 +43,14 @@
     <div class="row">
       <p>
         <label>
-          <input type="checkbox" />
-          <span>Pessoa Fisica</span>
+          <input name="group1" type="radio" checked />
+          <span>Pessoa Juridica</span>
         </label>
       </p>
       <p>
         <label>
-          <input type="checkbox" checked="checked" />
-          <span>Pessoa Jurísdica</span>
+          <input name="group1" type="radio" />
+          <span>Pessoa Fisica</span>
         </label>
       </p>
     </div>
