--- a/empresa-home.html
+++ b/empresa-home.html
@@ -92,7 +92,11 @@
                 </tbody>
             </table>
             <div class="solicitacoes">
-                <h1>Realizar Solicitaçãos</h1>
+                <!-- <di>
+                    <h3>Selecione a Data da Coleta</h3>
+                    <input type="text" class="datepicker">
+                </di> -->
+                <h1>Realizar Pagamento</h1>
                 <h6>Inserir o Código</h3>
                     <input type="text" id="codigo" class="validate">
                     <h6>Valor Total: $0,00 </h6>
@@ -100,7 +104,6 @@
                     <div class="botao">
                         <button type="submit">Gerar Boleto</button>
                     </div>
-
             </div>
         </section>
 
@@ -108,6 +111,7 @@
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="js/auto.js"></script>
+        <script src="js/calendario.js"></script>
 
         <footer class="page-footer indigo accent-4">
             <div class="container">
